# persona

./: .env.example  .env.example.backup  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml  run_benchmark.sh  test_invalid_config.env
.github/workflows/: ci.yml
app_server/: config.py  db.py  main.py
app_server/routers/: chat_api.py  graph_api.py
docs/: API.md  Architecture.md  Byoa.md  CODEBASE_OVERVIEW.md  DEVELOPMENT.md  LLM_CLIENTS_IMPLEMENTATION.md  LLM_CODEBASE.md  MEMORY_EVAL_MASTER.md  eval_research_notes.md  evaluation_framework_design.md  memory_design_v2.md
evals/: ANALYSIS_LOG.md  EVALS_DIAGNOSIS.md  EXPERIMENTS.md  MEMORY_INDEXING_DIAGNOSIS.md  README.md  ZEP_GRAPHITI_LEARNINGS.md  analysis_examples.json  analyze_results.py  benchmark_runner.py  clean_graph.py  cli.py  complete_gold_analysis.md  config.py  debug_eval.py  gold_answer_locations.md  ingest_benchmark.py  judge_analysis.md  raw_data_analysis.md  requirements.txt  run_demo.py  runner.py  scoring_methodology.md  zep_analysis_examples.json
evals/adapters/: base.py  evermem_adapter.py  mem0_adapter.py  persona_adapter.py  zep_adapter.py
evals/analysis/: evermemos_architecture.md
evals/benchmarks/: __init__.py  longmemeval.py  personamem.py  registry.py
evals/configs/: full_dataset.yaml  full_eval.yaml  golden_set.yaml  graphiti_longmemeval_full.yaml  graphiti_personamem_full.yaml  longmemeval_only.yaml  persona_personamem_matched.yaml  quick_test.yaml  retry_failed.yaml
evals/core/: __init__.py  compat.py  interfaces.py  models.py
evals/engine/: __init__.py  engine.py  executor.py
evals/experiments/: BENCHMARK_REPORT.md  README.md
evals/explorer/: __init__.py  app.py
evals/final_results/: README.md  benchmark_mem0_vector_final.json  benchmark_persona_sampled_valid.json  benchmark_zep_initial_single_session.json
evals/loaders/: __init__.py  longmemeval_loader.py  personamem_loader.py  unified_loader.py
evals/logging/: __init__.py  deep_logger.py  log_schema.py
evals/longmemeval/: __init__.py  answer.py  config.py  evaluate_qa.py  fetch_data.py  ingest.py  loader.py  main.py  pipeline.py
evals/metrics/: __init__.py  base.py  exact_match.py  llm_judge.py  retrieval.py
evals/persona_eval/: __init__.py  analyzer.py  database.py  failure_classifier.py  metrics.py
evals/scripts/: analyze_benchmark_deep.py  analyze_failures.py  analyze_graphiti_run.py  analyze_ingestion.py  analyze_results.py  compare_runs.py  diagnose_graphiti.py  diagnose_retrieval.py  download_personamem.py  dump_graph.py  failure_inspector.py  generate_breakdown.py  generate_golden_sets.py  generate_report.py  graph_audit.py  inspect_mem0.py  judge_longmemeval_run.py  live_monitor.py  map_results.py  neo4j_probe.py  per_question_diagnostics.py  reevaluate_results.py  repro_failure.py  retry_failed_questions.py  sample_questions.py  verify_data_order.py  verify_full_benchmark_integrity.py  verify_longmemeval_oracle.py  verify_skew.py  wipe_neo4j_batch.py
evals/utils/: __init__.py  (+3 more)
examples/: conversation.py
persona/: __init__.py
server/: config.py  dependencies.py  logging_config.py  main.py  run.py
tests/: Dockerfile.test  conftest.py  run_tests.sh  test_api.py  test_endpoints.py  test_graph_operations.py  test_rag_interface.py  test_services.py
(+133 files in other folders)
